[project]
name = "projetoapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Letícia Soares",email = "ssoareslethy@gmail.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
